maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:4: error: not found: value Diretion
    if (getDirection()==Diretion.NORTH) {
                        ^