maze.island.IslandMaze.scala.code
override def run() {
  while(porteBiscuit()==false) {
    if (getDirection()==Diretion.NORTH) {
      if (estFaceMur()==true) {
      	keepHandOnSideWall()
      }
      else {
        avance()
      }    
    }
    else {
      setDirection(Direction.NORTH)
    }
    if (estSurBiscuit()==true) {
      prendBiscuit()
    }  
  }
}  

def keepHandOnSideWall() {
  gauche()
  if (estFaceMur()==true) {
    droite()
    if (estFaceMur()==false) {
    avance()
    }
    else {
      droite()
    }
  }
  else {
    avance()
  }  
}